objects/wkcc__LocationWellnessFact__c.object
<CustomObject>
    <description>This object aggregates individual wellness counts by location and status.  Directly related counts are maintained for level-1 locations.  Cascading counts are maintained for level-1 and level-2 locations.</description>
    <fields>
        <fullName>wkcc__ExternalId__c</fullName>
        <description>A unique identifier for the record in the format [&quot;Cascade&quot; + &quot;:&quot; +] &lt;Location Id&gt; + ‘:’ + &lt;Wellness Status&gt;. The cascade prefix is only present in records that include child location wellness status values.</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique identifier for the record in the format [&quot;Cascade&quot; + &quot;:&quot; +] &lt;Location Id&gt; + ‘:’ + &lt;Wellness Status&gt;. The cascade prefix is only present in records that include child location wellness status values.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wkcc__LocationEmployeeCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total count of individuals regardless of wellness status.</description>
        <inlineHelpText>The total count of employees regardless of wellness status.</inlineHelpText>
        <label>Location Individual Count</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkcc__LocationLevel__c</fullName>
        <description>The related location&apos;s location level.</description>
        <formula>wkcc__Location__r.LocationLevel</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The related location&apos;s location level.</inlineHelpText>
        <label>Location Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkcc__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location that this fact record relates to</description>
        <inlineHelpText>The location that this fact record relates to.</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Location Wellness Facts</relationshipLabel>
        <relationshipName>LocationWellnessFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkcc__NeedsReaggregation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Marks a location as needing re-aggregation if true, or not needing it if false.</description>
        <inlineHelpText>Marks a location as needing re-aggregation if true, or not needing it if false.</inlineHelpText>
        <label>Needs Reaggregation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__WellnessPercent__c</fullName>
        <description>The percent of the location’s individuals that are in the wellness status.</description>
        <formula>IF(
  wkcc__LocationEmployeeCount__c = 0,
  0,
  wkcc__WellnessStatusEmployeeCount__c / wkcc__LocationEmployeeCount__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percent of the location’s employees that are in the wellness status.</inlineHelpText>
        <label>Wellness %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>wkcc__WellnessStatusEmployeeCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The count of individuals having the wellness status.</description>
        <inlineHelpText>The count of employees having the wellness status.</inlineHelpText>
        <label>Wellness Status Individual Count</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkcc__WellnessStatus__c</fullName>
        <description>The wellness status for the individual.</description>
        <inlineHelpText>The wellness status for the employee.</inlineHelpText>
        <label>Wellness Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Location Wellness Fact</label>
    <nameField>
        <displayFormat>LWF-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Wellness Facts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>